--- a/Modulo2_Sprint.ipynb
+++ b/Modulo2_Sprint.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -118,16 +118,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "\n",
-    "g_codigo_factura = []\n",
-    "g_monto_total_vendido = []\n",
-    "g_detalle_facturas = {}"
+    "\n",
+    "g_detalle_facturas = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ingresar_factura(nombre, productos_lista, precio_lista):\n",
+    "    global g_codigo_factura\n",
+    "    global g_monto_total_vendido\n",
+    "    global g_detalle_facturas\n",
+    "\n",
+    "    fecha = datetime.now()\n",
+    "    dia_factura = fecha.date()\n",
+    "    hora_factura = fecha.time().strftime('%H:%M')\n",
+    "\n",
+    "    codigo_factura = str(fecha)\n",
+    "    codigo_factura = codigo_factura.replace('-',  '').replace(':', '').replace('.', '').replace(' ', '')\n",
+    "    codigo_factura_lista = [codigo_factura] * len(productos_lista)\n",
+    "    nombre_lista = [nombre] * len(productos_lista)\n",
+    "    dia = [dia_factura] * len(productos_lista)\n",
+    "    hora = [hora_factura] * len(productos_lista)\n",
+    "\n",
+    "    df_factura = pd.DataFrame({'Codigo Factura' : codigo_factura_lista, 'Nombre Cliente': nombre_lista, 'Productos': productos_lista, '$': precio_lista, 'Fecha': dia, 'Hora': hora})\n",
+    "\n",
+    "    factura_productos_por_clientes = df_factura.groupby(['Nombre Cliente', 'Productos', 'Fecha', 'Hora'])['$'].sum().reset_index()\n",
+    "\n",
+    "    df_factura_productos_por_cliente = factura_productos_por_clientes.pivot_table(index=['Nombre Cliente', 'Productos'], columns=['Fecha', 'Hora'], values='$',\n",
+    "                                                                                     aggfunc='sum', fill_value=0)\n",
+    "\n",
+    "    # Agregar el DataFrame de detalle al diccionario de detalle de facturas\n",
+    "    #g_detalle_facturas[codigo_factura] = df_factura\n",
+    "\n",
+    "    g_detalle_facturas.append(df_factura)\n",
+    "\n",
+    "    print(df_factura_productos_por_cliente)\n",
+    "    #print(codigo_factura)\n",
+    "    #print(factura_monto_total)"
    ]
   },
   {
@@ -139,56 +177,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fecha                    2024-03-30\n",
-      "Hora                          16:20\n",
+      "Fecha                    2024-03-31\n",
+      "Hora                          12:50\n",
       "Nombre Cliente Productos           \n",
       "José Ignacio   Condones          40\n",
       "               Manzana          350\n",
-      "               Plátano          520\n",
-      "910\n"
+      "               Plátano          520\n"
      ]
     }
    ],
    "source": [
-    "def ingresar_factura(nombre_lista, productos_lista, precio_lista):\n",
-    "    global g_codigo_factura\n",
-    "    global g_monto_total_vendido\n",
-    "    global g_detalle_facturas\n",
-    "\n",
-    "    fecha = datetime.now()\n",
-    "    dia_factura = fecha.date()\n",
-    "    hora_factura = fecha.time().strftime('%H:%M')\n",
-    "\n",
-    "    codigo_factura = str(fecha)\n",
-    "    codigo_factura = codigo_factura.replace('-',  '').replace(':', '').replace('.', '').replace(' ', '')\n",
-    "    \n",
-    "    dia = [dia_factura] * len(nombre_lista)\n",
-    "    hora = [hora_factura] * len(nombre_lista)\n",
-    "\n",
-    "    df_factura = pd.DataFrame({'Nombre Cliente': nombre_lista, 'Productos': productos_lista, '$': precio_lista, 'Fecha': dia, 'Hora': hora})\n",
-    "\n",
-    "    factura_monto_total = df_factura['$'].sum()\n",
-    "\n",
-    "    g_codigo_factura.append(codigo_factura)\n",
-    "    g_monto_total_vendido.append(factura_monto_total)\n",
-    "\n",
-    "    factura_productos_por_clientes = df_factura.groupby(['Nombre Cliente', 'Productos', 'Fecha', 'Hora'])['$'].sum().reset_index()\n",
-    "\n",
-    "    df_factura_productos_por_cliente = factura_productos_por_clientes.pivot_table(index=['Nombre Cliente', 'Productos'], columns=['Fecha', 'Hora'], values='$',\n",
-    "                                                                                     aggfunc='sum', fill_value=0)\n",
-    "\n",
-    "    # Agregar el DataFrame de detalle al diccionario de detalle de facturas\n",
-    "    g_detalle_facturas[codigo_factura] = df_factura_productos_por_cliente\n",
-    "\n",
-    "    print(df_factura_productos_por_cliente)\n",
-    "    #print(codigo_factura)\n",
-    "    print(factura_monto_total)\n",
-    "\n",
-    "nombre_prueba = ['José Ignacio', 'José Ignacio', 'José Ignacio']\n",
+    "nombre_prueba = 'José Ignacio'\n",
     "productos_prueba = ['Manzana', 'Plátano', 'Condones']\n",
     "precios_prueba = [350, 520, 40]\n",
     "\n",
-    "ingresar_factura(nombre_prueba, productos_prueba, precios_prueba)"
+    "ingresar_factura(nombre_prueba, productos_prueba, precios_prueba)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha                    2024-03-31\n",
+      "Hora                          12:50\n",
+      "Nombre Cliente Productos           \n",
+      "Deyanira Garay Chicles          250\n",
+      "               Cigarros        3500\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombreprueba1 = 'Deyanira Garay'\n",
+    "productoprueba1 = ['Cigarros', 'Chicles']\n",
+    "precioprueba1 = [3500, 250]\n",
+    "\n",
+    "\n",
+    "ingresar_factura(nombreprueba1, productoprueba1, precioprueba1)"
    ]
   },
   {
@@ -200,22 +229,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fecha                    2024-03-30\n",
-      "Hora                          16:21\n",
-      "Nombre Cliente Productos           \n",
-      "Deyanira Garay Chicles          250\n",
-      "               Cigarros        3500\n",
-      "3750\n"
+      "   Cantidad Ventas  $ Total Vendido\n",
+      "0                2             4660\n"
      ]
     }
    ],
    "source": [
-    "nombreprueba1 = ['Deyanira Garay', 'Deyanira Garay']\n",
-    "productoprueba1 = ['Cigarros', 'Chicles']\n",
-    "precioprueba1 = [3500, 250]\n",
+    "df_ventas_totales = df.groupby('Codigo Factura')['$'].sum().reset_index()\n",
     "\n",
+    "total_filas = len(df_ventas_totales)\n",
+    "total_venta = df_ventas_totales['$'].sum()\n",
     "\n",
-    "ingresar_factura(nombreprueba1, productoprueba1, precioprueba1)"
+    "resumen_df = pd.DataFrame({\n",
+    "    'Cantidad Ventas': [total_filas],\n",
+    "    '$ Total Vendido': [total_venta]\n",
+    "})\n",
+    "\n",
+    "print(resumen_df)\n"
    ]
   },
   {
@@ -224,23 +254,335 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codigo Factura</th>\n",
+       "      <th>Nombre Cliente</th>\n",
+       "      <th>$</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20240331125027888585</td>\n",
+       "      <td>Deyanira Garay</td>\n",
+       "      <td>3750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20240331125017601248</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Codigo Factura  Nombre Cliente     $\n",
+       "1  20240331125027888585  Deyanira Garay  3750\n",
+       "0  20240331125017601248    José Ignacio   910"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ventas_por_usuario = df.groupby(['Codigo Factura', 'Nombre Cliente'])['$'].sum().reset_index()\n",
+    "df_ventas_por_usuario = df_ventas_por_usuario.sort_values(by='Nombre Cliente')\n",
+    "df_ventas_por_usuario\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Productos</th>\n",
+       "      <th>TotalVendido</th>\n",
+       "      <th>CantidadVendida</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chicles</td>\n",
+       "      <td>250</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cigarros</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Condones</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Manzana</td>\n",
+       "      <td>350</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plátano</td>\n",
+       "      <td>520</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Productos  TotalVendido  CantidadVendida\n",
+       "0   Chicles           250                1\n",
+       "1  Cigarros          3500                1\n",
+       "2  Condones            40                1\n",
+       "3   Manzana           350                1\n",
+       "4   Plátano           520                1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ventas_por_producto = df.groupby('Productos')['$'].agg(TotalVendido='sum', CantidadVendida='count').reset_index()\n",
+    "\n",
+    "df_ventas_por_producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Cantidad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03-31</td>\n",
+       "      <td>4660</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha  Total  Cantidad\n",
+       "0  2024-03-31   4660         2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ventas_diarias = df.groupby(['Codigo Factura', 'Fecha', 'Nombre Cliente'])['$'].sum().reset_index()\n",
+    "df_ventas_diarias = df_ventas_diarias.groupby('Fecha')['$'].agg(Total='sum', Cantidad='count').reset_index()\n",
+    "df_ventas_diarias\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['20240330162032553673', '20240330162048456403', '20240330162136744223']\n",
-      "[910, 3750, 3750]\n",
-      "Se han realizado 3 ventas en total.  El Monto total de vendido es 8410\n"
+      "         Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
+      "0  20240331125017601248    José Ignacio   Manzana   350  2024-03-31  12:50\n",
+      "1  20240331125017601248    José Ignacio   Plátano   520  2024-03-31  12:50\n",
+      "2  20240331125017601248    José Ignacio  Condones    40  2024-03-31  12:50\n",
+      "3  20240331125027888585  Deyanira Garay  Cigarros  3500  2024-03-31  12:50\n",
+      "4  20240331125027888585  Deyanira Garay   Chicles   250  2024-03-31  12:50\n"
      ]
     }
    ],
    "source": [
-    "cantidad_de_ventas = len(g_codigo_factura)\n",
-    "monto_total_ventas = sum(g_monto_total_vendido)\n",
+    "# Convertir los datos en un DataFrame\n",
+    "df = pd.concat([pd.DataFrame(item) for item in g_detalle_facturas], ignore_index=True)\n",
     "\n",
-    "print(g_codigo_factura)\n",
-    "print(g_monto_total_vendido)\n",
-    "print(f'Se han realizado {cantidad_de_ventas} ventas en total.  El Monto total de vendido es {monto_total_ventas}')"
+    "# Mostrar el DataFrame\n",
+    "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[         Codigo Factura Nombre Cliente Productos    $       Fecha   Hora\n",
+      "0  20240331125017601248   José Ignacio   Manzana  350  2024-03-31  12:50\n",
+      "1  20240331125017601248   José Ignacio   Plátano  520  2024-03-31  12:50\n",
+      "2  20240331125017601248   José Ignacio  Condones   40  2024-03-31  12:50,          Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
+      "0  20240331125027888585  Deyanira Garay  Cigarros  3500  2024-03-31  12:50\n",
+      "1  20240331125027888585  Deyanira Garay   Chicles   250  2024-03-31  12:50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(g_detalle_facturas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codigo Factura</th>\n",
+       "      <th>Nombre Cliente</th>\n",
+       "      <th>Productos</th>\n",
+       "      <th>$</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Hora</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20240331125027888585</td>\n",
+       "      <td>Deyanira Garay</td>\n",
+       "      <td>Cigarros</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>2024-03-31</td>\n",
+       "      <td>12:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20240331125027888585</td>\n",
+       "      <td>Deyanira Garay</td>\n",
+       "      <td>Chicles</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2024-03-31</td>\n",
+       "      <td>12:50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
+       "0  20240331125027888585  Deyanira Garay  Cigarros  3500  2024-03-31  12:50\n",
+       "1  20240331125027888585  Deyanira Garay   Chicles   250  2024-03-31  12:50"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_detalle_facturas[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
